# mini-emr

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 0768f35f64c2_diagnosis_model.py  23c5f1825421_user_model.py  9b61ffd50773_consultation_date_field.py  b9b0a350c3e2_consultation_model.py
backend/app/: main.py
backend/app/core/: config.py  database.py  query_builder.py  rate_limiter.py  redis.py  router.py  schemas.py  security.py  seed.py
backend/app/modules/auth/: exceptions.py  router.py  schemas.py  service.py
backend/app/modules/consultation/: exceptions.py  models.py  router.py  schemas.py  service.py
backend/app/modules/diagnoses/: exceptions.py  models.py  router.py  schemas.py  service.py
backend/app/modules/user/: dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py
backend/scripts/: alembic.sh  prestart.sh  seed_icd10.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth.py  test_consultation.py  test_diagnosis.py  test_health.py  test_user.py
backend/tests/unit/: test_diagnosis_service.py  test_permissions.py  test_schemas.py  test_security.py  test_user_service.py
frontend/: .dockerignore  .gitignore  Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  env.d.ts  main.ts  style.css
nginx/: .gitignore  docker-entrypoint.sh  nginx.conf.template  proxy.conf.template  ssl-common.conf.template
nginx/conf.d/: default.conf.template
(+27 files in other folders)
